sample-app/s0-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: s0
  namespace: fluidosmesh
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: s0
