sample-app/s0-ingress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: http-gateway-fluidosmesh
  namespace: fluidosmesh
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation, be careful to this label that should match that of istio-ingress
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: s0
  namespace: fluidosmesh
spec:
  hosts:
  - "*"
  gateways:
  - http-gateway-fluidosmesh
  http:
  - match:
    - uri:
        prefix: /s0
    rewrite:
      uri: "/"
    route:
    - destination:
        port:
          number: 80
        host: s0
